bootcamp/deploy/features/ingress.yaml
{ { - $serviceName := include "helm.name" . - } }
  { { - $servicePort  := .Values.service.ports.port - } }
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    apigateway.ingress.kubernetes.io/client-arns: arn:aws:iam::357182662916:user/apigw-user
    apigateway.ingress.kubernetes.io/stage-name: prod
    kubernetes.io/ingress.class: apigateway
  name: { { include "helm.name" . } }
spec:
  rules:
    - http:
        paths:
        { { - range $.Values.ingress.paths } }
        - path: { { . } }
          backend:
            serviceName: { { $serviceName } }
            servicePort: { { $servicePort } }
        { { - end } }
